--- a/src/tools/ScratchWinRTClient/ScratchWinRTClient.vcxproj
+++ b/src/tools/ScratchWinRTClient/ScratchWinRTClient.vcxproj
@@ -101,12 +101,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
+    <ClInclude Include="HostManager.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="HostManager.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Midl Include="HostManager.idl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
