So this doesn't work because HostClass is fundamentally a WinRT type, not a CoClass. What if it _wasn't_ a runtimeclass?

--- a/src/tools/ScratchWinRTServer/ScratchWinRTServer.vcxproj
+++ b/src/tools/ScratchWinRTServer/ScratchWinRTServer.vcxproj
@@ -123,6 +123,7 @@
     <Midl Include="IScratchInterface.idl" />
     <Midl Include="ScratchClass.idl" />
     <Midl Include="HostClass.idl" />
+    <!-- <Midl Include="IMyComInterface.idl" /> -->
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="ScratchWinRTServer.manifest" />
