Revert "I was thinking of making the HostClass a COM class by default, but this is horrible. Then, the client wouldn't be able to use it to get the winrt type. We want to use the winrt type in Lists in the client. So this won't work"
This reverts commit 501c47adb24d90a34c1900714075200a43fccd53.

--- a/src/tools/ScratchWinRTServer/ScratchWinRTServer.vcxproj
+++ b/src/tools/ScratchWinRTServer/ScratchWinRTServer.vcxproj
@@ -122,7 +122,7 @@
   <ItemGroup>
     <Midl Include="IScratchInterface.idl" />
     <Midl Include="ScratchClass.idl" />
-    <!-- <Midl Include="HostClass.idl" /> -->
+    <Midl Include="HostClass.idl" />
     <!-- <Midl Include="IMyComInterface.idl" /> -->
   </ItemGroup>
   <ItemGroup>
