--- a/src/common.build.pre.props
+++ b/src/common.build.pre.props
@@ -63,7 +63,7 @@
 
   <!-- For ALL build types-->
   <PropertyGroup Label="Configuration">
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>ClangCl</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
     <LinkIncremental>false</LinkIncremental>
     <PreferredToolArchitecture>x64</PreferredToolArchitecture>
@@ -87,7 +87,7 @@
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <MinimalRebuild>false</MinimalRebuild>
       <RuntimeTypeInfo>false</RuntimeTypeInfo>
-      <AdditionalOptions>/std:c++17 /utf-8 %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>/std:c++17 /utf-8 -Wno-error=defaulted-function-deleted -Wno-error=overloaded-virtual -Wno-error=sign-compare -Wno-error=microsoft-goto -Wno-error=unknown-pragmas -Wno-error=microsoft-sealed -Wno-error=inconsistent-missing-override -Wno-error=extra-tokens -Wno-error=missing-field-initializers -Wno-error=unused-variable -Wno-error=ignored-qualifiers -Wno-error=c++11-narrowing -Wno-error=pragma-pack -Wno-error=nonportable-include-path -Wno-error=microsoft-include -Wno-error=reorder-ctor -Wno-error=unused-parameter -Wno-error=microsoft-exception-spec -Wno-error=missing-braces -Wno-error=switch %(AdditionalOptions)</AdditionalOptions>
       <ControlFlowGuard>Guard</ControlFlowGuard>
     </ClCompile>
     <ResourceCompile>
