--- a/src/TerminalSettings/TerminalSettings/SettingsControl.vcxproj
+++ b/src/TerminalSettings/TerminalSettings/SettingsControl.vcxproj
@@ -115,6 +115,9 @@
       <DependentUpon>Keybindings.xaml</DependentUpon>
       <SubType>Code</SubType>
     </ClInclude>
+    <ClInclude Include="Launch.h">
+      <DependentUpon>Launch.xaml</DependentUpon>
+    </ClInclude>
     <ClInclude Include="ObjectModel\AppSettings.h" />
     <ClInclude Include="ObjectModel\ColorScheme.h" />
     <ClInclude Include="ObjectModel\GlobalSettings.h" />
@@ -142,6 +145,9 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Keybindings.xaml">
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Launch.xaml">
       <SubType>Designer</SubType>
     </Page>
     <Page Include="MainPage.xaml">
@@ -190,6 +196,9 @@
       <DependentUpon>Keybindings.xaml</DependentUpon>
       <SubType>Code</SubType>
     </ClCompile>
+    <ClCompile Include="Launch.cpp">
+      <DependentUpon>Launch.xaml</DependentUpon>
+    </ClCompile>
     <ClCompile Include="ObjectModel\AppSettings.cpp" />
     <ClCompile Include="ObjectModel\ColorScheme.cpp" />
     <ClCompile Include="ObjectModel\GlobalSettings.cpp" />
@@ -219,6 +228,10 @@
     </Midl>
     <Midl Include="Globals.idl">
       <DependentUpon>Globals.xaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Midl>
+    <Midl Include="Launch.idl">
+      <DependentUpon>Launch.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Midl>
     <Midl Include="Keybindings.idl">
