--- a/src/TerminalSettings/TerminalSettings/SettingsControl.vcxproj.filters
+++ b/src/TerminalSettings/TerminalSettings/SettingsControl.vcxproj.filters
@@ -9,6 +9,7 @@
     <Page Include="Profiles.xaml" />
     <Page Include="ColorSchemes.xaml" />
     <Page Include="Keybindings.xaml" />
+    <Page Include="Launch.xaml" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="App.idl" />
