--- a/src/TerminalSettings/TerminalSettings/SettingsControl.vcxproj
+++ b/src/TerminalSettings/TerminalSettings/SettingsControl.vcxproj
@@ -111,6 +111,9 @@
       <DependentUpon>Globals.xaml</DependentUpon>
       <SubType>Code</SubType>
     </ClInclude>
+    <ClInclude Include="Interaction.h">
+      <DependentUpon>Interaction.xaml</DependentUpon>
+    </ClInclude>
     <ClInclude Include="Keybindings.h">
       <DependentUpon>Keybindings.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -142,6 +145,9 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Globals.xaml">
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Interaction.xaml">
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Keybindings.xaml">
@@ -192,6 +198,9 @@
       <DependentUpon>Globals.xaml</DependentUpon>
       <SubType>Code</SubType>
     </ClCompile>
+    <ClCompile Include="Interaction.cpp">
+      <DependentUpon>Interaction.xaml</DependentUpon>
+    </ClCompile>
     <ClCompile Include="Keybindings.cpp">
       <DependentUpon>Keybindings.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -232,6 +241,10 @@
     </Midl>
     <Midl Include="Launch.idl">
       <DependentUpon>Launch.xaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Midl>
+    <Midl Include="Interaction.idl">
+      <DependentUpon>Interaction.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Midl>
     <Midl Include="Keybindings.idl">
