--- a/src/TerminalSettings/TerminalSettings/SettingsControl.vcxproj.filters
+++ b/src/TerminalSettings/TerminalSettings/SettingsControl.vcxproj.filters
@@ -10,6 +10,7 @@
     <Page Include="ColorSchemes.xaml" />
     <Page Include="Keybindings.xaml" />
     <Page Include="Launch.xaml" />
+    <Page Include="Interaction.xaml" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="App.idl" />
