--- a/src/TerminalSettings/TerminalSettings/SettingsControl.vcxproj.filters
+++ b/src/TerminalSettings/TerminalSettings/SettingsControl.vcxproj.filters
@@ -12,7 +12,8 @@
     <Page Include="Launch.xaml" />
     <Page Include="Interaction.xaml" />
     <Page Include="Rendering.xaml" />
-    <Page Include="Appearance.xaml" />
+    <Page Include="GlobalAppearance.xaml" />
+    <Page Include="Home.xaml" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="App.idl" />
