--- a/src/TerminalSettings/TerminalSettings/SettingsControl.vcxproj.filters
+++ b/src/TerminalSettings/TerminalSettings/SettingsControl.vcxproj.filters
@@ -14,10 +14,17 @@
     <Page Include="Rendering.xaml" />
     <Page Include="GlobalAppearance.xaml" />
     <Page Include="Home.xaml" />
+    <Page Include="AddProfile.xaml" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="App.idl" />
     <Midl Include="MainPage.idl" />
+    <Midl Include="ObjectModel\ColorScheme.idl">
+      <Filter>ObjectModel</Filter>
+    </Midl>
+    <Midl Include="ObjectModel\ColorSchemeModel.idl">
+      <Filter>ObjectModel</Filter>
+    </Midl>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
@@ -36,6 +43,9 @@
     <ClCompile Include="ObjectModel\Profile.cpp">
       <Filter>ObjectModel</Filter>
     </ClCompile>
+    <ClCompile Include="ObjectModel\ColorSchemeModel.cpp">
+      <Filter>ObjectModel</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
@@ -49,6 +59,9 @@
       <Filter>ObjectModel</Filter>
     </ClInclude>
     <ClInclude Include="ObjectModel\Profile.h">
+      <Filter>ObjectModel</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjectModel\ColorSchemeModel.h">
       <Filter>ObjectModel</Filter>
     </ClInclude>
   </ItemGroup>
