--- a/src/TerminalSettings/TerminalSettings/TerminalSettings.vcxproj.filters
+++ b/src/TerminalSettings/TerminalSettings/TerminalSettings.vcxproj.filters
@@ -89,6 +89,9 @@
     <Filter Include="Assets">
       <UniqueIdentifier>{e48dc53e-40b1-40cb-970a-f89935452892}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Controls">
+      <UniqueIdentifier>{3c5d86d4-f5ec-47b9-8125-7f0ef368ae74}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="PropertySheet.props" />
