--- a/src/TerminalSettings/TerminalSettings/SettingsControl.vcxproj.filters
+++ b/src/TerminalSettings/TerminalSettings/SettingsControl.vcxproj.filters
@@ -20,6 +20,7 @@
     <Midl Include="App.idl" />
     <Midl Include="MainPage.idl" />
     <Midl Include="HomeGridItem.idl" />
+    <Midl Include="SettingsControlViewModel.idl" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
@@ -39,6 +40,7 @@
       <Filter>ObjectModel</Filter>
     </ClCompile>
     <ClCompile Include="HomeGridItem.cpp" />
+    <ClCompile Include="SettingsControlViewModel.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
@@ -55,6 +57,7 @@
       <Filter>ObjectModel</Filter>
     </ClInclude>
     <ClInclude Include="HomeGridItem.h" />
+    <ClInclude Include="SettingsControlViewModel.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Assets\Wide310x150Logo.scale-200.png">
