--- a/src/cascadia/TerminalApp/lib/TerminalAppLib.vcxproj
+++ b/src/cascadia/TerminalApp/lib/TerminalAppLib.vcxproj
@@ -117,7 +117,7 @@
     <ClInclude Include="../AzureCloudShellGenerator.h" />
     <ClInclude Include="../TelnetGenerator.h" />
     <ClInclude Include="../ColorHelper.h" />
-    <ClInclude Include="..\TerminalSettings.h">
+    <ClInclude Include="../TerminalSettings.h">
       <DependentUpon>../TerminalSettings.idl</DependentUpon>
     </ClInclude>
     <ClInclude Include="pch.h" />
@@ -189,7 +189,7 @@
     <ClCompile Include="../Pane.LayoutSizeNode.cpp" />
     <ClCompile Include="../ColorHelper.cpp" />
     <ClCompile Include="../DebugTapConnection.cpp" />
-    <ClCompile Include="..\TerminalSettings.cpp">
+    <ClCompile Include="../TerminalSettings.cpp">
       <DependentUpon>../TerminalSettings.idl</DependentUpon>
     </ClCompile>
     <ClCompile Include="pch.cpp">
@@ -262,7 +262,7 @@
     <Midl Include="../Command.idl" />
     <Midl Include="../CommandKeyChordVisibilityConverter.idl" />
     <Midl Include="../Tab.idl" />
-    <Midl Include="..\TerminalSettings.idl" />
+    <Midl Include="../TerminalSettings.idl" />
   </ItemGroup>
   <!-- ========================= Misc Files ======================== -->
   <ItemGroup>
